--- a/Pages/Account/AccountIndex.razor
+++ b/Pages/Account/AccountIndex.razor
@@ -11,40 +11,41 @@
     <p>Carregando...</p>
 }
 else {
-    <p>
-        <a href="@AccountsRoutes.GoToAddition()">
-            Nova Conta
-        </a>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    Descrição
-                </th>
-                <th>
-                    Saldo Inicial
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-    @foreach (var item in Accounts) {
-            <tr>
-                <td>
-                    @item.Name
-                </td>
-                <td>
-                    @item.OpeningBalance
-                </td>
-                <td>
-                    <a href="@AccountsRoutes.GoToEdition(item.Id)">Editar</a>
-                </td>
-            </tr>
-    }
-        </tbody>
-    </table>
+    <header>Minhas Contas</header>
+
+    <a href="@AccountsRoutes.GoToAddition()">
+        <RadzenButton Text="Adicionar" Icon="add" Class="rz-mt-8 rz-mb-4" />
+    </a>
+
+    <RadzenDataGrid       
+        PageSize="25" 
+        AllowPaging="false" 
+        PagerHorizontalAlign="HorizontalAlign.Left" 
+        ShowPagingSummary="false"
+        Data="@Accounts" 
+        TItem="Account" 
+        ColumnWidth="300px" 
+        LogicalFilterOperator="LogicalFilterOperator.Or">
+        
+        <Columns>
+            <RadzenDataGridColumn TItem="Account" Property="Account.Id" Title="#" Frozen="true" Width="80px" TextAlign="TextAlign.Center" CssClass=“font-weight-bold” />
+            <RadzenDataGridColumn TItem="Account" Property="Account.Name" Title="Nome" Frozen="true" Width="160px" />
+            <RadzenDataGridColumn TItem="Account" Property="Account.Bank.Number" Title="Nº Banco" Width="80px"/>
+            <RadzenDataGridColumn TItem="Account" Property="Account.Bank.Name" Title="Banco" Width="160px" />
+            <RadzenDataGridColumn TItem="Account" Property="" Title="" Width="160px" TextAlign="TextAlign.End">
+                <Template Context="account">
+                    <a href="@AccountsRoutes.GoToEdition(account.Id)">
+                        <RadzenButton Text="Editar"/>
+                    </a>
+                </Template>
+            </RadzenDataGridColumn>
+        </Columns>
+    </RadzenDataGrid>
 }
+
+<style>
+
+</style>
 
 @code{
     List<Account> Accounts { get; set; } = new();
