--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -4,12 +4,13 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <link href="css/site.css" rel="stylesheet" />
     <link href="PersonalFinance.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
@@ -29,6 +30,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
