--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,28 +1,16 @@
 ﻿@using PersonalFinance.Helpers.Routes;
 
-<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Financeiro Pessoal</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
+<RadzenPanelMenu Style="width:auto" >
+    <div class="top-row ps-3 navbar navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">Financeiro Pessoal</a>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="@(AccountsRoutes.Index)">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Contas
-            </NavLink>
-        </div>
-    </nav>
-</div>
+    </div>
+
+    <RadzenPanelMenuItem Text="Home" Icon="home" Path=""></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Conta" Icon="account_balance" Path="@AccountsRoutes.Index"></RadzenPanelMenuItem>
+</RadzenPanelMenu>
 
 @code {
     private bool collapseNavMenu = true;
