Início de implementação de rotina de movimentações.

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -10,6 +10,7 @@
 
     <RadzenPanelMenuItem Text="Home" Icon="home" Path=""></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Conta" Icon="account_balance" Path="@AccountsRoutes.Index"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Movimentações" Icon="attach_money" Path="@TransactionsRoutes.Index"></RadzenPanelMenuItem>
 </RadzenPanelMenu>
 
 @code {
