--- a/Pages/Account/AccountsUpsert.razor
+++ b/Pages/Account/AccountsUpsert.razor
@@ -9,12 +9,14 @@
 @inherits General
 
 @if (Loading) {
-    <p>Carregando...</p>
+    <div class="rz-m-12">
+        <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" />
+    </div>
 }
 else {
     <header>@GetHeaderText() Conta</header>
 
-    <RadzenTemplateForm Data="Account" Submit="@((Account args) => Confirm())" InvalidSubmit="InvalidConfirmation" TItem="Account">
+    <RadzenTemplateForm Data="Account" Submit="@((args) => Confirm())" InvalidSubmit="InvalidConfirmation" TItem="Account">
         <DataAnnotationsValidator />
 
         <RadzenRow Gap="width: 100%">
@@ -27,7 +29,7 @@ else {
                                 <RadzenLabel Text="Descrição" Style="width: 100%" Component="Name"/>
                                 <RadzenTextBox 
                                     @bind-Value="Account.Description"
-                                    Style="width: 80%;" 
+                                    Style="width: 100%;" 
                                     Name="Name"
                                     />
                                 <ValidationMessage For="@(() => Account.Description)"/>
@@ -39,7 +41,7 @@ else {
                                     TValue="double" 
                                     Format="c" 
                                     @bind-Value=@Account.OpeningBalance 
-                                    Style="width: 80%"/>
+                                    Style="width: 100%"/>
                             </RadzenColumn>
 
                             <RadzenColumn Size="12" SizeMD="6">
@@ -50,7 +52,7 @@ else {
                                     AllowFiltering="true"
                                     Placeholder="Selecione..." 
                                     Data="@Banks" 
-                                    Style="width: 80%;" 
+                                    Style="width: 100%;" 
                                     TextProperty="@(ObjectHelper.GetFullName<Bank, string>(x => x.Name))" 
                                     ValueProperty="Id" 
                                     Name="BankId"
@@ -68,7 +70,7 @@ else {
                                     AllowFiltering="true"
                                     Placeholder="Selecione..." 
                                     Data="@AccountTypes" 
-                                    Style="width: 80%;" 
+                                    Style="width: 100%;" 
                                     TextProperty="@(ObjectHelper.GetFullName<AccountType, string>(x => x.Description))" 
                                     ValueProperty="Id" 
                                     Name="AccountTypeId"
@@ -107,9 +109,9 @@ else {
                 ButtonStyle="ButtonStyle.Light" 
                 Variant="Variant.Flat" 
                 Size="ButtonSize.Large" 
-                Icon="cancel" 
-                Text="Cancelar"
-                Click="@(() => Cancel())" />
+                Icon="arrow_back" 
+                Text="Voltar"
+                Click="@(() => Back())" />
 
             @if (!IsNew) {
                 <RadzenButton 
@@ -135,40 +137,30 @@ else {
     protected override async Task OnInitializedAsync()
     {
         try {
-            Banks = await AccountsAPI.GetBanks();
-            AccountTypes = await AccountsAPI.GerAccountTypes();
-            Account =  IsNew ?  new() : await AccountsAPI.Get(Id);
+            await LoadObjects();
         }
         catch (Exception ex) {
 
-            await DialogService.Alert(ex.InnerException?.Message ?? ex.Message);
+            await ErrorMsg(ex);
         }
     }
 
     async Task Confirm()
     {
         try {
-            Account.Bank = null;
+            CleanDependencys();
 
             var result = IsNew ? await Addition() : await Edition();
 
-            if (!result.IsSuccessStatusCode)
-                throw new Exception(result.ReasonPhrase);
-
-            NavigationManager.NavigateTo(AccountsRoutes.GoToIndex());
+            CheckResult(result);
         }
         catch (Exception ex) {
 
-            await DialogService.Alert(ex.InnerException?.Message ?? ex.Message, "Erro");
+            await ErrorMsg(ex);
         }
-    }
+    }    
 
-    async Task InvalidConfirmation(FormInvalidSubmitEventArgs args)
-    {
-        await DialogService.Alert(string.Join("<br/>", args.Errors), "Erro");
-    }
-
-    void Cancel()
+    void Back()
     {
         NavigationManager.NavigateTo(AccountsRoutes.Index);
     }
@@ -177,38 +169,46 @@ else {
     {
         try {
 
-            var confirmed = await DialogService
-                .Confirm(
-                    "Deseja Confirmar a Exclusão?", 
-                    "Exclusão", 
-                    new ConfirmOptions(){ 
-                        OkButtonText = "Sim", CancelButtonText = "Não"
-                    }
-                );
+            var exclusionConfirmed = await DialogConfirmation("Deseja Confirmar a Exclusão?", "Exclusão");            
 
-            var exclusionCanceled = !confirmed ?? true;
-
-            if (exclusionCanceled)
+            if (!exclusionConfirmed)
                 return;
 
             var result = await AccountsAPI.DeleteAccount(Id);
 
-            if (!result.IsSuccessStatusCode)
-                throw new Exception(result.ReasonPhrase);
-
-            NavigationManager.NavigateTo(AccountsRoutes.GoToIndex());
+            CheckResult(result);
         }
         catch (Exception ex) {
 
-            await DialogService.Alert(ex.InnerException?.Message ?? ex.Message);
+            await ErrorMsg(ex);
         }
     }
 
+    #region AUXILIARY
+    async Task LoadObjects()
+    {
+        Banks = await AccountsAPI.GetBanks();
+        AccountTypes = await AccountsAPI.GerAccountTypes();
+        Account = IsNew ? new() : await AccountsAPI.Get(Id);
+    }
+
     async Task<HttpResponseMessage> Addition() => await AccountsAPI.PostAccount(Account);
+
     async Task<HttpResponseMessage> Edition() => await AccountsAPI.PutAccount(Id, Account);
 
-    #region AUXILIARY
     string GetHeaderText() => IsNew ? "Incluindo" : "Editando";
+
+    void CleanDependencys() 
+    {
+        Account.Bank = null;
+    }
+    void CheckResult(HttpResponseMessage result)
+    {
+        if (!result.IsSuccessStatusCode)
+            throw new Exception(result.ReasonPhrase);
+
+        NavigationManager.NavigateTo(AccountsRoutes.GoToIndex());
+    }
     #endregion
 
     #region VALIDATIONS
