--- a/Pages/Transactions/TransactionIndex.razor
+++ b/Pages/Transactions/TransactionIndex.razor
@@ -9,7 +9,9 @@
 @inherits General
 
 @if (Loading) {
-    <p>Carregando...</p>
+    <div class="rz-m-12">
+        <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" />
+    </div>
 }
 else {
     <header>Movimentações</header>
@@ -77,17 +79,16 @@ else {
 }
 
 @code {
-    List<Transaction> Transactions { get; set; } = new();
+    List<Transaction> Transactions { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         try {
             Transactions = await TransactionsAPI.GetSearch();
-
         }
         catch (Exception ex) {
 
-            await DialogService.Alert(ex.InnerException?.Message ?? ex.Message);
+            await ErrorMsg(ex);
         }
     }
 
